[package]
name = "DoConnectTools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
get_if_addrs = "0.5"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }